# timetracker

./: README.md  meson.build
data/: com.github.elwis.timetracker.appdata.xml.in  com.github.elwis.timetracker.desktop.in
po/: POTFILES  POTFILES~  com.github.elwis.timetracker.pot  sv.po
src/: Application.vala  Main.vala
src/Services/: DatabaseManager.vala
src/Widgets/: FavoriteButton.vala  Headerbar.vala  ProjectList.vala  Sidebar.vala  TaskList.vala  Window.vala
